# arp

./: config.json
arp-client/: Cargo.toml  Untitled-3.md  config.example.json
arp-client/src/: acp.rs  config.rs  jsonrpc.rs  main.rs  message.rs  router.rs  routes.rs  session.rs
arp-client/src/agentx/: claude.rs  codex.rs  gemini.rs  mod.rs  types.rs  utils.rs
arp-client/src/handlers/: filesystem.rs  mod.rs  proxy.rs  session.rs
arp-common/src/: http.rs  lib.rs  router.rs
arp-server/src/: main.rs
