
[package]
name = "arpc"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../arp-common" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = { workspace = true }
which = { workspace = true }
dirs = "6.0.0"
regex = "1.12.2"
chrono = "0.4"
hostname = "0.4.1"
tokio-util = "0.7"
urlencoding = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "service", "http1"] }
http-body-util = "0.1"
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
colored = "2"
tokio-tungstenite = "0.21"
http = "1.3.1"
rmcp = { version = "0.8.1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

[dev-dependencies]
tempfile = "3"
